# ethprim-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
crates/ethaddr/: Cargo.toml
crates/ethaddr-macros/: Cargo.toml
crates/ethaddr-macros/src/: buffer.rs  checksum.rs  hex.rs  lib.rs
crates/ethaddr/src/: checksum.rs  lib.rs
crates/ethdigest/: Cargo.toml
crates/ethdigest-macros/: Cargo.toml
crates/ethdigest-macros/src/: lib.rs
crates/ethdigest/src/: lib.rs
crates/ethprim/: Cargo.toml  README.md
crates/ethprim/src/: lib.rs
crates/ethrpc/: Cargo.toml
crates/ethrpc/src/: http.rs  jsonrpc.rs  lib.rs  method.rs  serialization.rs  types.rs
crates/ethrpc/src/types/: internal.rs
crates/shared/: Cargo.toml  README.md
crates/shared/src/: hex.rs  lib.rs
ethaddr/: Cargo.toml  README.md
ethaddr/src/: checksum.rs  keccak.rs  lib.rs
ethdigest/: Cargo.toml  README.md
ethdigest/src/: hasher.rs  hex.rs  lib.rs  serde.rs
shared/: README.md
shared/src/: hex.rs  keccak.rs  lib.rs
src/: lib.rs
