[package]
name = "ethaddr"
version = "0.2.1"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2021"
description = "Ethereum public address"
documentation = "https://docs.rs/ethaddr"
readme = "README.md"
homepage = "https://github.com/nlordell/ethcrates-rs/tree/main/crates/ethaddr"
repository = "https://github.com/nlordell/ethcrates-rs"
license = "MIT OR Apache-2.0"
keywords = ["public", "address", "ethereum"]
categories = ["cryptography::cryptocurrencies", "no-std"]

[package.metadata.docs.rs]
features = ["serde", "std"]

[features]
default = ["std"]
std = ["serde?/std", "sha3?/std"]

[dependencies]
serde = { workspace = true, optional = true }
sha3 = { workspace = true, optional = true }
