[package]
name = "ethdigest"
version = "0.3.0"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2021"
description = "Ethereum digests and hashing"
documentation = "https://docs.rs/ethdigest"
readme = "README.md"
homepage = "https://github.com/nlordell/ethcrates-rs/tree/main/crates/ethdigest"
repository = "https://github.com/nlordell/ethcrates-rs"
license = "MIT OR Apache-2.0"
keywords = ["digest", "ethereum", "hash", "keccak"]
categories = ["cryptography::cryptocurrencies", "no-std"]

[package.metadata.docs.rs]
features = ["std", "serde"]

[features]
default = ["std"]
std = ["serde?/std", "sha3?/std"]

[dependencies]
serde = { workspace = true, optional = true }
sha3 = { workspace = true, optional = true }
