[package]
name = "ethaddr-macros"
version = "0.1.2"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2021"
description = "Ethereum public address literals"
documentation = "https://docs.rs/ethaddr-macros"
readme = "README.md"
homepage = "https://github.com/nlordell/ethcrates-rs/tree/main/crates/ethaddr-macros"
repository = "https://github.com/nlordell/ethcrates-rs"
license = "MIT OR Apache-2.0"
keywords = ["public", "address", "ethereum", "proc-macro"]
categories = ["cryptography::cryptocurrencies"]

[lib]
proc-macro = true

[dependencies]
sha3 = { workspace = true }
