[package]
name = "ethaddr"
version = "0.1.3"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2021"
description = "Ethereum public address"
documentation = "https://docs.rs/ethaddr"
readme = "README.md"
homepage = "https://github.com/nlordell/ethcrates-rs/tree/main/crates/ethaddr"
repository = "https://github.com/nlordell/ethcrates-rs"
license = "MIT OR Apache-2.0"
keywords = ["public", "address", "ethereum"]
categories = ["cryptography::cryptocurrencies", "no-std"]

[package.metadata.docs.rs]
features = ["checksum", "serde", "std", "macros"]

[features]
default = ["checksum", "std"]
checksum = ["sha3"]
macros = ["ethaddr-macros"]
std = ["serde?/std", "sha3?/std"]

[dependencies]
ethaddr-macros = { version = "0.1.2", path = "../ethaddr-macros", optional = true }
serde = { workspace = true, optional = true }
sha3 = { workspace = true, optional = true }
