[package]
name = "ethprim"
version = "0.1.0"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2021"
description = "Ethereum primitive type meta-crate"
documentation = "https://docs.rs/ethprim"
readme = "README.md"
homepage = "https://github.com/nlordell/ethcrates-rs/tree/main/crates/ethprim"
repository = "https://github.com/nlordell/ethcrates-rs"
license = "MIT OR Apache-2.0"
keywords = ["address", "ethereum", "hash", "primitive", "meta"]
categories = ["cryptography::cryptocurrencies", "no-std"]

[package.metadata.docs.rs]
features = ["serde", "std", "macros"]

[features]
default = ["keccak", "std"]
keccak = ["ethaddr/checksum", "ethdigest/keccak"]
macros = ["ethaddr/macros", "ethdigest/macros", "ethnum/macros"]
serde = ["ethaddr/serde", "ethdigest/serde", "ethnum/serde"]
std = ["ethaddr/std", "ethdigest/std"]

[dependencies]
ethaddr = { version = "0.1", path = "../ethaddr", default-features = false }
ethdigest = { version = "0.2", path = "../ethdigest", default-features = false }
ethnum = "1"
