[package]
name = "ethrpc"
version = "0.0.6"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2021"
description = "Ethereum transport-agnositic JSON RPC implementation"
documentation = "https://docs.rs/ethrpc"
readme = "README.md"
homepage = "https://github.com/nlordell/ethcrates-rs/tree/main/crates/ethrpc"
repository = "https://github.com/nlordell/ethcrates-rs"
license = "MIT OR Apache-2.0"
keywords = ["json", "rpc", "ethereum"]
categories = ["cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
features = ["http"]

[features]
http = ["reqwest"]

[dependencies]
arrayvec = { version = "0.7", features = ["serde"] }
ethprim = { version = "0.1", path = "../ethprim", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "native-tls"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
ethprim = { version = "0.1", path = "../ethprim", features = ["macros"] }
tokio = { version = "1", features = ["macros"] }
hex-literal = "0.4"
